# freebot-gatt-control

./: .editorconfig  .gitignore  .gitmodules  readme.md
common/freebot_control/inc/: freebot_control.h
control/: CMakeLists.txt  prj.conf
control/lib/: freebot_control
control/src/: main.c
controller/: Cargo.toml
controller/src/: app.rs  ble.rs  main.rs  model.rs
robot/: CMakeLists.txt  prj.conf
robot/src/: main.c
